y.output
Terminals unused in grammar

   DIV
   B_SLASH
   IDENT


Grammar

    0 $accept: prog_start $end

    1 prog_start: functions
    2           | error

    3 functions: %empty
    4          | function functions

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS declarations ENDPARAMS BEGINLOCALS declarations ENDLOCALS BEGINBODY statements ENDBODY

    6 declarations: declaration SEMICOLON declarations
    7             | %empty
    8             | declaration error

    9 statements: statement SEMICOLON statements
   10           | %empty
   11           | statement error

   12 declaration: identifiers COLON declaration2

   13 declaration2: ARRAY L_BRACKET NUMBER R_BRACKET OF INTEGER
   14             | ENUM L_PAREN identifiers R_PAREN
   15             | INTEGER

   16 identifiers: IDENTIFIER COMMA identifiers
   17            | IDENTIFIER

   18 statement: stateVar
   19          | stateIf
   20          | stateWhile
   21          | stateDo
   22          | stateRead
   23          | stateWrite
   24          | stateContinue
   25          | stateReturn

   26 stateVar: var ASSIGNMENT expression

   27 stateIf: IF boolexpr THEN statements stateElse ENDIF

   28 stateElse: ELSE statements
   29          | %empty

   30 stateWhile: WHILE boolexpr BEGINLOOP statements ENDLOOP

   31 stateDo: DO BEGINLOOP statements ENDLOOP WHILE boolexpr

   32 stateRead: READ vars

   33 vars: var COMMA vars
   34     | var

   35 stateWrite: WRITE vars

   36 stateContinue: CONTINUE

   37 stateReturn: RETURN expression

   38 boolexpr: boolexpr OR relationAndExpr
   39         | relationAndExpr

   40 relationAndExpr: relationExpr AND relationAndExpr
   41                | relationExpr

   42 relationExpr: NOT relationExpr2
   43             | relationExpr2

   44 relationExpr2: relationExpression
   45              | TRUETOKEN
   46              | FALSETOKEN
   47              | relationParentheses

   48 relationExpression: expression comp expression

   49 relationParentheses: L_PAREN boolexpr R_PAREN

   50 comp: EQ
   51     | NEQ
   52     | LT
   53     | GT
   54     | LTE
   55     | GTE

   56 expression: multiplicativeExpr PLUS expression
   57           | multiplicativeExpr MINUS expression
   58           | multiplicativeExpr
   59           | error

   60 multiplicativeExpr: term MULT multiplicativeExpr
   61                   | term F_SLASH multiplicativeExpr
   62                   | term MOD multiplicativeExpr
   63                   | term

   64 term: UMINUS term1
   65     | term1
   66     | term2

   67 term1: var
   68      | NUMBER
   69      | L_PAREN expression R_PAREN

   70 term2: IDENTIFIER L_PAREN expressions R_PAREN

   71 expressions: expression COMMA expressions
   72            | expression

   73 var: IDENTIFIER
   74    | IDENTIFIER L_BRACKET expression R_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256) 2 8 11 59
COLON (258) 12
ASSIGNMENT (259) 26
OR (260) 38
AND (261) 40
NOT (262) 42
LT (263) 52
LTE (264) 54
GT (265) 53
GTE (266) 55
EQ (267) 50
NEQ (268) 51
PLUS (269) 56
MINUS (270) 57
MULT (271) 60
DIV (272)
MOD (273) 62
UMINUS (274) 64
L_BRACKET (275) 13 74
R_BRACKET (276) 13 74
L_PAREN (277) 14 49 69 70
R_PAREN (278) 14 49 69 70
SEMICOLON (279) 5 6 9
COMMA (280) 16 33 71
IDENTIFIER (281) 5 16 17 70 73 74
BEGINPARAMS (282) 5
ENDPARAMS (283) 5
FUNCTION (284) 5
ENDLOCALS (285) 5
BEGINLOCALS (286) 5
BEGINBODY (287) 5
ENDBODY (288) 5
ENUM (289) 14
NUMBER (290) 13 68
ARRAY (291) 13
OF (292) 13
INTEGER (293) 13 15
THEN (294) 27
ELSE (295) 28
IF (296) 27
ENDIF (297) 27
DO (298) 31
BEGINLOOP (299) 30 31
ENDLOOP (300) 30 31
WHILE (301) 30 31
READ (302) 32
WRITE (303) 35
CONTINUE (304) 36
RETURN (305) 37
TRUETOKEN (306) 45
FALSETOKEN (307) 46
F_SLASH (308) 61
B_SLASH (309)
IDENT (310)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
prog_start (57)
    on left: 1 2, on right: 0
functions (58)
    on left: 3 4, on right: 1 4
function (59)
    on left: 5, on right: 4
declarations (60)
    on left: 6 7 8, on right: 5 6
statements (61)
    on left: 9 10 11, on right: 5 9 27 28 30 31
declaration (62)
    on left: 12, on right: 6 8
declaration2 (63)
    on left: 13 14 15, on right: 12
identifiers (64)
    on left: 16 17, on right: 12 14 16
statement (65)
    on left: 18 19 20 21 22 23 24 25, on right: 9 11
stateVar (66)
    on left: 26, on right: 18
stateIf (67)
    on left: 27, on right: 19
stateElse (68)
    on left: 28 29, on right: 27
stateWhile (69)
    on left: 30, on right: 20
stateDo (70)
    on left: 31, on right: 21
stateRead (71)
    on left: 32, on right: 22
vars (72)
    on left: 33 34, on right: 32 33 35
stateWrite (73)
    on left: 35, on right: 23
stateContinue (74)
    on left: 36, on right: 24
stateReturn (75)
    on left: 37, on right: 25
boolexpr (76)
    on left: 38 39, on right: 27 30 31 38 49
relationAndExpr (77)
    on left: 40 41, on right: 38 39 40
relationExpr (78)
    on left: 42 43, on right: 40 41
relationExpr2 (79)
    on left: 44 45 46 47, on right: 42 43
relationExpression (80)
    on left: 48, on right: 44
relationParentheses (81)
    on left: 49, on right: 47
comp (82)
    on left: 50 51 52 53 54 55, on right: 48
expression (83)
    on left: 56 57 58 59, on right: 26 37 48 56 57 69 71 72 74
multiplicativeExpr (84)
    on left: 60 61 62 63, on right: 56 57 58 60 61 62
term (85)
    on left: 64 65 66, on right: 60 61 62 63
term1 (86)
    on left: 67 68 69, on right: 64 65
term2 (87)
    on left: 70, on right: 66
expressions (88)
    on left: 71 72, on right: 70 71
var (89)
    on left: 73 74, on right: 26 33 34 67


State 0

    0 $accept: . prog_start $end

    error     shift, and go to state 1
    FUNCTION  shift, and go to state 2

    $end  reduce using rule 3 (functions)

    prog_start  go to state 3
    functions   go to state 4
    function    go to state 5


State 1

    2 prog_start: error .

    $default  reduce using rule 2 (prog_start)


State 2

    5 function: FUNCTION . IDENTIFIER SEMICOLON BEGINPARAMS declarations ENDPARAMS BEGINLOCALS declarations ENDLOCALS BEGINBODY statements ENDBODY

    IDENTIFIER  shift, and go to state 6


State 3

    0 $accept: prog_start . $end

    $end  shift, and go to state 7


State 4

    1 prog_start: functions .

    $default  reduce using rule 1 (prog_start)


State 5

    4 functions: function . functions

    FUNCTION  shift, and go to state 2

    $default  reduce using rule 3 (functions)

    functions  go to state 8
    function   go to state 5


State 6

    5 function: FUNCTION IDENTIFIER . SEMICOLON BEGINPARAMS declarations ENDPARAMS BEGINLOCALS declarations ENDLOCALS BEGINBODY statements ENDBODY

    SEMICOLON  shift, and go to state 9


State 7

    0 $accept: prog_start $end .

    $default  accept


State 8

    4 functions: function functions .

    $default  reduce using rule 4 (functions)


State 9

    5 function: FUNCTION IDENTIFIER SEMICOLON . BEGINPARAMS declarations ENDPARAMS BEGINLOCALS declarations ENDLOCALS BEGINBODY statements ENDBODY

    BEGINPARAMS  shift, and go to state 10


State 10

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS . declarations ENDPARAMS BEGINLOCALS declarations ENDLOCALS BEGINBODY statements ENDBODY

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 7 (declarations)

    declarations  go to state 12
    declaration   go to state 13
    identifiers   go to state 14


State 11

   16 identifiers: IDENTIFIER . COMMA identifiers
   17            | IDENTIFIER .

    COMMA  shift, and go to state 15

    $default  reduce using rule 17 (identifiers)


State 12

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS declarations . ENDPARAMS BEGINLOCALS declarations ENDLOCALS BEGINBODY statements ENDBODY

    ENDPARAMS  shift, and go to state 16


State 13

    6 declarations: declaration . SEMICOLON declarations
    8             | declaration . error

    error      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 14

   12 declaration: identifiers . COLON declaration2

    COLON  shift, and go to state 19


State 15

   16 identifiers: IDENTIFIER COMMA . identifiers

    IDENTIFIER  shift, and go to state 11

    identifiers  go to state 20


State 16

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS declarations ENDPARAMS . BEGINLOCALS declarations ENDLOCALS BEGINBODY statements ENDBODY

    BEGINLOCALS  shift, and go to state 21


State 17

    8 declarations: declaration error .

    $default  reduce using rule 8 (declarations)


State 18

    6 declarations: declaration SEMICOLON . declarations

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 7 (declarations)

    declarations  go to state 22
    declaration   go to state 13
    identifiers   go to state 14


State 19

   12 declaration: identifiers COLON . declaration2

    ENUM     shift, and go to state 23
    ARRAY    shift, and go to state 24
    INTEGER  shift, and go to state 25

    declaration2  go to state 26


State 20

   16 identifiers: IDENTIFIER COMMA identifiers .

    $default  reduce using rule 16 (identifiers)


State 21

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS declarations ENDPARAMS BEGINLOCALS . declarations ENDLOCALS BEGINBODY statements ENDBODY

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 7 (declarations)

    declarations  go to state 27
    declaration   go to state 13
    identifiers   go to state 14


State 22

    6 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 6 (declarations)


State 23

   14 declaration2: ENUM . L_PAREN identifiers R_PAREN

    L_PAREN  shift, and go to state 28


State 24

   13 declaration2: ARRAY . L_BRACKET NUMBER R_BRACKET OF INTEGER

    L_BRACKET  shift, and go to state 29


State 25

   15 declaration2: INTEGER .

    $default  reduce using rule 15 (declaration2)


State 26

   12 declaration: identifiers COLON declaration2 .

    $default  reduce using rule 12 (declaration)


State 27

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS declarations ENDPARAMS BEGINLOCALS declarations . ENDLOCALS BEGINBODY statements ENDBODY

    ENDLOCALS  shift, and go to state 30


State 28

   14 declaration2: ENUM L_PAREN . identifiers R_PAREN

    IDENTIFIER  shift, and go to state 11

    identifiers  go to state 31


State 29

   13 declaration2: ARRAY L_BRACKET . NUMBER R_BRACKET OF INTEGER

    NUMBER  shift, and go to state 32


State 30

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS declarations ENDPARAMS BEGINLOCALS declarations ENDLOCALS . BEGINBODY statements ENDBODY

    BEGINBODY  shift, and go to state 33


State 31

   14 declaration2: ENUM L_PAREN identifiers . R_PAREN

    R_PAREN  shift, and go to state 34


State 32

   13 declaration2: ARRAY L_BRACKET NUMBER . R_BRACKET OF INTEGER

    R_BRACKET  shift, and go to state 35


State 33

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS declarations ENDPARAMS BEGINLOCALS declarations ENDLOCALS BEGINBODY . statements ENDBODY

    IDENTIFIER  shift, and go to state 36
    IF          shift, and go to state 37
    DO          shift, and go to state 38
    WHILE       shift, and go to state 39
    READ        shift, and go to state 40
    WRITE       shift, and go to state 41
    CONTINUE    shift, and go to state 42
    RETURN      shift, and go to state 43

    $default  reduce using rule 10 (statements)

    statements     go to state 44
    statement      go to state 45
    stateVar       go to state 46
    stateIf        go to state 47
    stateWhile     go to state 48
    stateDo        go to state 49
    stateRead      go to state 50
    stateWrite     go to state 51
    stateContinue  go to state 52
    stateReturn    go to state 53
    var            go to state 54


State 34

   14 declaration2: ENUM L_PAREN identifiers R_PAREN .

    $default  reduce using rule 14 (declaration2)


State 35

   13 declaration2: ARRAY L_BRACKET NUMBER R_BRACKET . OF INTEGER

    OF  shift, and go to state 55


State 36

   73 var: IDENTIFIER .
   74    | IDENTIFIER . L_BRACKET expression R_BRACKET

    L_BRACKET  shift, and go to state 56

    $default  reduce using rule 73 (var)


State 37

   27 stateIf: IF . boolexpr THEN statements stateElse ENDIF

    error       shift, and go to state 57
    NOT         shift, and go to state 58
    UMINUS      shift, and go to state 59
    L_PAREN     shift, and go to state 60
    IDENTIFIER  shift, and go to state 61
    NUMBER      shift, and go to state 62
    TRUETOKEN   shift, and go to state 63
    FALSETOKEN  shift, and go to state 64

    boolexpr             go to state 65
    relationAndExpr      go to state 66
    relationExpr         go to state 67
    relationExpr2        go to state 68
    relationExpression   go to state 69
    relationParentheses  go to state 70
    expression           go to state 71
    multiplicativeExpr   go to state 72
    term                 go to state 73
    term1                go to state 74
    term2                go to state 75
    var                  go to state 76


State 38

   31 stateDo: DO . BEGINLOOP statements ENDLOOP WHILE boolexpr

    BEGINLOOP  shift, and go to state 77


State 39

   30 stateWhile: WHILE . boolexpr BEGINLOOP statements ENDLOOP

    error       shift, and go to state 57
    NOT         shift, and go to state 58
    UMINUS      shift, and go to state 59
    L_PAREN     shift, and go to state 60
    IDENTIFIER  shift, and go to state 61
    NUMBER      shift, and go to state 62
    TRUETOKEN   shift, and go to state 63
    FALSETOKEN  shift, and go to state 64

    boolexpr             go to state 78
    relationAndExpr      go to state 66
    relationExpr         go to state 67
    relationExpr2        go to state 68
    relationExpression   go to state 69
    relationParentheses  go to state 70
    expression           go to state 71
    multiplicativeExpr   go to state 72
    term                 go to state 73
    term1                go to state 74
    term2                go to state 75
    var                  go to state 76


State 40

   32 stateRead: READ . vars

    IDENTIFIER  shift, and go to state 36

    vars  go to state 79
    var   go to state 80


State 41

   35 stateWrite: WRITE . vars

    IDENTIFIER  shift, and go to state 36

    vars  go to state 81
    var   go to state 80


State 42

   36 stateContinue: CONTINUE .

    $default  reduce using rule 36 (stateContinue)


State 43

   37 stateReturn: RETURN . expression

    error       shift, and go to state 57
    UMINUS      shift, and go to state 59
    L_PAREN     shift, and go to state 82
    IDENTIFIER  shift, and go to state 61
    NUMBER      shift, and go to state 62

    expression          go to state 83
    multiplicativeExpr  go to state 72
    term                go to state 73
    term1               go to state 74
    term2               go to state 75
    var                 go to state 76


State 44

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS declarations ENDPARAMS BEGINLOCALS declarations ENDLOCALS BEGINBODY statements . ENDBODY

    ENDBODY  shift, and go to state 84


State 45

    9 statements: statement . SEMICOLON statements
   11           | statement . error

    error      shift, and go to state 85
    SEMICOLON  shift, and go to state 86


State 46

   18 statement: stateVar .

    $default  reduce using rule 18 (statement)


State 47

   19 statement: stateIf .

    $default  reduce using rule 19 (statement)


State 48

   20 statement: stateWhile .

    $default  reduce using rule 20 (statement)


State 49

   21 statement: stateDo .

    $default  reduce using rule 21 (statement)


State 50

   22 statement: stateRead .

    $default  reduce using rule 22 (statement)


State 51

   23 statement: stateWrite .

    $default  reduce using rule 23 (statement)


State 52

   24 statement: stateContinue .

    $default  reduce using rule 24 (statement)


State 53

   25 statement: stateReturn .

    $default  reduce using rule 25 (statement)


State 54

   26 stateVar: var . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 87


State 55

   13 declaration2: ARRAY L_BRACKET NUMBER R_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 88


State 56

   74 var: IDENTIFIER L_BRACKET . expression R_BRACKET

    error       shift, and go to state 57
    UMINUS      shift, and go to state 59
    L_PAREN     shift, and go to state 82
    IDENTIFIER  shift, and go to state 61
    NUMBER      shift, and go to state 62

    expression          go to state 89
    multiplicativeExpr  go to state 72
    term                go to state 73
    term1               go to state 74
    term2               go to state 75
    var                 go to state 76


State 57

   59 expression: error .

    $default  reduce using rule 59 (expression)


State 58

   42 relationExpr: NOT . relationExpr2

    error       shift, and go to state 57
    UMINUS      shift, and go to state 59
    L_PAREN     shift, and go to state 60
    IDENTIFIER  shift, and go to state 61
    NUMBER      shift, and go to state 62
    TRUETOKEN   shift, and go to state 63
    FALSETOKEN  shift, and go to state 64

    relationExpr2        go to state 90
    relationExpression   go to state 69
    relationParentheses  go to state 70
    expression           go to state 71
    multiplicativeExpr   go to state 72
    term                 go to state 73
    term1                go to state 74
    term2                go to state 75
    var                  go to state 76


State 59

   64 term: UMINUS . term1

    L_PAREN     shift, and go to state 82
    IDENTIFIER  shift, and go to state 36
    NUMBER      shift, and go to state 62

    term1  go to state 91
    var    go to state 76


State 60

   49 relationParentheses: L_PAREN . boolexpr R_PAREN
   69 term1: L_PAREN . expression R_PAREN

    error       shift, and go to state 57
    NOT         shift, and go to state 58
    UMINUS      shift, and go to state 59
    L_PAREN     shift, and go to state 60
    IDENTIFIER  shift, and go to state 61
    NUMBER      shift, and go to state 62
    TRUETOKEN   shift, and go to state 63
    FALSETOKEN  shift, and go to state 64

    boolexpr             go to state 92
    relationAndExpr      go to state 66
    relationExpr         go to state 67
    relationExpr2        go to state 68
    relationExpression   go to state 69
    relationParentheses  go to state 70
    expression           go to state 93
    multiplicativeExpr   go to state 72
    term                 go to state 73
    term1                go to state 74
    term2                go to state 75
    var                  go to state 76


State 61

   70 term2: IDENTIFIER . L_PAREN expressions R_PAREN
   73 var: IDENTIFIER .
   74    | IDENTIFIER . L_BRACKET expression R_BRACKET

    L_BRACKET  shift, and go to state 56
    L_PAREN    shift, and go to state 94

    $default  reduce using rule 73 (var)


State 62

   68 term1: NUMBER .

    $default  reduce using rule 68 (term1)


State 63

   45 relationExpr2: TRUETOKEN .

    $default  reduce using rule 45 (relationExpr2)


State 64

   46 relationExpr2: FALSETOKEN .

    $default  reduce using rule 46 (relationExpr2)


State 65

   27 stateIf: IF boolexpr . THEN statements stateElse ENDIF
   38 boolexpr: boolexpr . OR relationAndExpr

    OR    shift, and go to state 95
    THEN  shift, and go to state 96


State 66

   39 boolexpr: relationAndExpr .

    $default  reduce using rule 39 (boolexpr)


State 67

   40 relationAndExpr: relationExpr . AND relationAndExpr
   41                | relationExpr .

    AND  shift, and go to state 97

    $default  reduce using rule 41 (relationAndExpr)


State 68

   43 relationExpr: relationExpr2 .

    $default  reduce using rule 43 (relationExpr)


State 69

   44 relationExpr2: relationExpression .

    $default  reduce using rule 44 (relationExpr2)


State 70

   47 relationExpr2: relationParentheses .

    $default  reduce using rule 47 (relationExpr2)


State 71

   48 relationExpression: expression . comp expression

    LT   shift, and go to state 98
    LTE  shift, and go to state 99
    GT   shift, and go to state 100
    GTE  shift, and go to state 101
    EQ   shift, and go to state 102
    NEQ  shift, and go to state 103

    comp  go to state 104


State 72

   56 expression: multiplicativeExpr . PLUS expression
   57           | multiplicativeExpr . MINUS expression
   58           | multiplicativeExpr .

    PLUS   shift, and go to state 105
    MINUS  shift, and go to state 106

    $default  reduce using rule 58 (expression)


State 73

   60 multiplicativeExpr: term . MULT multiplicativeExpr
   61                   | term . F_SLASH multiplicativeExpr
   62                   | term . MOD multiplicativeExpr
   63                   | term .

    MULT     shift, and go to state 107
    MOD      shift, and go to state 108
    F_SLASH  shift, and go to state 109

    $default  reduce using rule 63 (multiplicativeExpr)


State 74

   65 term: term1 .

    $default  reduce using rule 65 (term)


State 75

   66 term: term2 .

    $default  reduce using rule 66 (term)


State 76

   67 term1: var .

    $default  reduce using rule 67 (term1)


State 77

   31 stateDo: DO BEGINLOOP . statements ENDLOOP WHILE boolexpr

    IDENTIFIER  shift, and go to state 36
    IF          shift, and go to state 37
    DO          shift, and go to state 38
    WHILE       shift, and go to state 39
    READ        shift, and go to state 40
    WRITE       shift, and go to state 41
    CONTINUE    shift, and go to state 42
    RETURN      shift, and go to state 43

    $default  reduce using rule 10 (statements)

    statements     go to state 110
    statement      go to state 45
    stateVar       go to state 46
    stateIf        go to state 47
    stateWhile     go to state 48
    stateDo        go to state 49
    stateRead      go to state 50
    stateWrite     go to state 51
    stateContinue  go to state 52
    stateReturn    go to state 53
    var            go to state 54


State 78

   30 stateWhile: WHILE boolexpr . BEGINLOOP statements ENDLOOP
   38 boolexpr: boolexpr . OR relationAndExpr

    OR         shift, and go to state 95
    BEGINLOOP  shift, and go to state 111


State 79

   32 stateRead: READ vars .

    $default  reduce using rule 32 (stateRead)


State 80

   33 vars: var . COMMA vars
   34     | var .

    COMMA  shift, and go to state 112

    $default  reduce using rule 34 (vars)


State 81

   35 stateWrite: WRITE vars .

    $default  reduce using rule 35 (stateWrite)


State 82

   69 term1: L_PAREN . expression R_PAREN

    error       shift, and go to state 57
    UMINUS      shift, and go to state 59
    L_PAREN     shift, and go to state 82
    IDENTIFIER  shift, and go to state 61
    NUMBER      shift, and go to state 62

    expression          go to state 113
    multiplicativeExpr  go to state 72
    term                go to state 73
    term1               go to state 74
    term2               go to state 75
    var                 go to state 76


State 83

   37 stateReturn: RETURN expression .

    $default  reduce using rule 37 (stateReturn)


State 84

    5 function: FUNCTION IDENTIFIER SEMICOLON BEGINPARAMS declarations ENDPARAMS BEGINLOCALS declarations ENDLOCALS BEGINBODY statements ENDBODY .

    $default  reduce using rule 5 (function)


State 85

   11 statements: statement error .

    $default  reduce using rule 11 (statements)


State 86

    9 statements: statement SEMICOLON . statements

    IDENTIFIER  shift, and go to state 36
    IF          shift, and go to state 37
    DO          shift, and go to state 38
    WHILE       shift, and go to state 39
    READ        shift, and go to state 40
    WRITE       shift, and go to state 41
    CONTINUE    shift, and go to state 42
    RETURN      shift, and go to state 43

    $default  reduce using rule 10 (statements)

    statements     go to state 114
    statement      go to state 45
    stateVar       go to state 46
    stateIf        go to state 47
    stateWhile     go to state 48
    stateDo        go to state 49
    stateRead      go to state 50
    stateWrite     go to state 51
    stateContinue  go to state 52
    stateReturn    go to state 53
    var            go to state 54


State 87

   26 stateVar: var ASSIGNMENT . expression

    error       shift, and go to state 57
    UMINUS      shift, and go to state 59
    L_PAREN     shift, and go to state 82
    IDENTIFIER  shift, and go to state 61
    NUMBER      shift, and go to state 62

    expression          go to state 115
    multiplicativeExpr  go to state 72
    term                go to state 73
    term1               go to state 74
    term2               go to state 75
    var                 go to state 76


State 88

   13 declaration2: ARRAY L_BRACKET NUMBER R_BRACKET OF INTEGER .

    $default  reduce using rule 13 (declaration2)


State 89

   74 var: IDENTIFIER L_BRACKET expression . R_BRACKET

    R_BRACKET  shift, and go to state 116


State 90

   42 relationExpr: NOT relationExpr2 .

    $default  reduce using rule 42 (relationExpr)


State 91

   64 term: UMINUS term1 .

    $default  reduce using rule 64 (term)


State 92

   38 boolexpr: boolexpr . OR relationAndExpr
   49 relationParentheses: L_PAREN boolexpr . R_PAREN

    OR       shift, and go to state 95
    R_PAREN  shift, and go to state 117


State 93

   48 relationExpression: expression . comp expression
   69 term1: L_PAREN expression . R_PAREN

    LT       shift, and go to state 98
    LTE      shift, and go to state 99
    GT       shift, and go to state 100
    GTE      shift, and go to state 101
    EQ       shift, and go to state 102
    NEQ      shift, and go to state 103
    R_PAREN  shift, and go to state 118

    comp  go to state 104


State 94

   70 term2: IDENTIFIER L_PAREN . expressions R_PAREN

    error       shift, and go to state 57
    UMINUS      shift, and go to state 59
    L_PAREN     shift, and go to state 82
    IDENTIFIER  shift, and go to state 61
    NUMBER      shift, and go to state 62

    expression          go to state 119
    multiplicativeExpr  go to state 72
    term                go to state 73
    term1               go to state 74
    term2               go to state 75
    expressions         go to state 120
    var                 go to state 76


State 95

   38 boolexpr: boolexpr OR . relationAndExpr
